--- a/index.html
+++ b/index.html
@@ -1,58 +1,199 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="robots" content="noindex,nofollow">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>CSS Selectors by NAME HERE</title>
-        <link href="css/pre.css" rel="stylesheet">
-        <link href="css/main.css" rel="stylesheet">
-        <style>
-            div#id-div{
-                background-color:yellow;
-            }
-        </style>
-    </head>
-    <body>
-        <header>
-            
-            <h1 class="page-header">CSS Selectors by NAME HERE</h1>
-            
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="robots" content="noindex,nofollow" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>CSS Selectors by NAME HERE</title>
+    <link href="css/pre.css" rel="stylesheet" />
+    <link href="css/main.css" rel="stylesheet" />
+    <style>
+        div#id-div {
+            background-color: grey;
+        }
+
+        li.my-list {
+            background-color: green;
+        }
+
+        div#new-div,
+        li.new-list {
+            background-color: red;
+        }
+
+        ul.my-kids>li {
+            background-color: orange;
+        }
+
+        div.grandkids li {
+            background-color: maroon;
+        }
+
+        .add-border {
+            border: 1px solid #000;
+        }
+
+        .add-background {
+            background-color: navy;
+        }
+    </style>
+</head>
+
+<body>
+    <header>
+        <h1 class="page-header">CSS Selectors by NAME HERE</h1>
+
         <nav>
             <ul>
                 <li><a href="#id">id</a></li>
                 <li><a href="#class">class</a></li>
                 <li><a href="#compound">compound</a></li>
+                <li><a href="#child">child</a></li>
+                <li><a href="#descendant">descendant</a></li>
+                <li><a href="#multiple">multiple</a></li>
             </ul>
-        </nav> 
-    </header>           
-        <p>This page demonstrates how CSS selectors work.</p>
+        </nav>
+    </header>
+    <p>This page demonstrates how CSS selectors work.</p>
 
-        <fieldset>
-            <legend><a id="id">id</a></legend>
-            <p>ids can be applied to only one item on a page</p>
-            <p>Here's how we hook an id attribute to an element:</p>
-            <pre><code>id="id-div"</code></pre>
-            <p>Here's how the CSS is applied to the element:</p>
-            <pre><code>div#id-div{
+    <fieldset>
+        <legend><a id="id">id</a></legend>
+        <p>ids can be applied to only one item on a page</p>
+        <p>Here's how we hook an id attribute to an element:</p>
+        <pre><code>id="id-div"</code></pre>
+        <p>Here's how the CSS is applied to the element:</p>
+        <pre><code>div#id-div{
     background-color:yellow;
 }</code></pre>
 
+        <p>Here's what it looks like:</p>
+        <div id="id-div">Inside my-div</div>
+    </fieldset>
 
-            <p>Here's what it looks like:</p>
-            <div id="id-div">Inside my-div</div>
-        </fieldset>
 
-        <footer class="page-footer">
-            <p><small>&copy; 2023 by 
-                NAME HERE, All Rights Reserved ~ 
-                <a id="html-checker" href="#" target="_blank">Check HTML</a> ~ 
+    <fieldset>
+        <legend><a id="class">class</a></legend>
+        <p>Classes can be applied to only one item on a page</p>
+        <p>Here's how we hook a class attribute to an element:</p>
+        <pre><code>class="my-list"</code></pre>
+        <p>Here's how the CSS is applied to the element:</p>
+        <pre><code>li.my-list{
+        background-color:orange;
+}</code></pre>
+
+        <p>Here's what it looks like:</p>
+        <div>
+            <ul>
+                <li class="my-list">I'm inside of an li with a class of my-list</li>
+                <li class="my-list">I'm inside of an li with a class of my-list</li>
+                <li class="my-list">I'm inside of an li with a class of my-list</li>
+            </ul>
+        </div>
+    </fieldset>
+
+
+    <fieldset>
+        <legend><a id="compound">compound</a></legend>
+        <p>Compound selectors allow us to use more than one selector for a set of rules. The
+            selectors must be separated by commas.</p>
+        <p>Here's how the CSS is applied to the element:</p>
+        <pre><code>div#new-div, li.new-list{
+        background-color: blue;
+}</code></pre>
+
+        <p>Here's what it looks like:</p>
+        <div id="new-div">I'm inside of a div with an id of new-div.</div>
+        <div>
+            <ul>
+                <li class="new-list">I'm inside of an li with a class of new-list</li>
+                <li class="new-list">I'm inside of an li with a class of new-list</li>
+                <li class="new-list">I'm inside of an li with a class of new-list</li>
+            </ul>
+        </div>
+    </fieldset>
+
+    <fieldset>
+        <legend><a id="child">child</a></legend>
+        <p>The child selector allows us to access the elements that are immediately inside the current element.</p>
+        <p>Here's how the CSS is applied to the element:</p>
+        <pre><code>ul.my-kids > li{
+        background-color: green;
+}</code></pre>
+
+        <p>Here's what it looks like:</p>
+        <div>
+            <ul class="my-kids">
+                <li>I'm inside of an li that is a child of a ul with a class of my-kids</li>
+                <li>I'm inside of an li that is a child of a ul with a class of my-kids</li>
+                <li>I'm inside of an li that is a child of a ul with a class of my-kids</li>
+            </ul>
+        </div>
+    </fieldset>
+
+    <fieldset>
+        <legend><a id="descendant">descendant</a></legend>
+        <p>The descendant selector allows us to hook to an element at any depth inside the current element.</p>
+        <p>Here's how the CSS is applied to the element:</p>
+        <pre><code>div.grandkids li{
+        background-color: red;
+}</code></pre>
+
+        <p>Here's what it looks like:</p>
+        <div class="grandkids">
+            <ul>
+                <li>I'm inside of an li that is a descendant of a div with a class of grandkids.</li>
+                <li>I'm inside of an li that is a descendant of a div with a class of grandkids.</li>
+                <li>I'm inside of an li that is a descendant of a div with a class of grandkids.</li>
+            </ul>
+        </div>
+    </fieldset>
+
+    <fieldset>
+        <legend><a id="multiple">multiple classes</a></legend>
+        <p>We can apply multiple classes by placing them in the class attribute with a space between each.</p>
+        <p>Here's how we hook multiple classes to an element:</p>
+        <pre><code>class="add-border add-background"</code></pre>
+        <p>Here's how the CSS is applied to the element:</p>
+        <pre><code>.add-border{
+        border:1px solid #000;
+}
+
+.add-background{
+        background-color: hotpink;
+}</code></pre>
+
+        <p>Here's what it looks like:</p>
+        <div>
+            <ul>
+                <li class="add-border add-background">I'm inside of an li with 2 classes</li>
+                <li class="add-border add-background">I'm inside of an li with 2 classes</li>
+                <li class="add-border add-background">I'm inside of an li with 2 classes</li>
+            </ul>
+        </div>
+    </fieldset>
+
+    <footer class="page-footer">
+        <p>
+            <small>&copy; 2023 by NAME HERE, All Rights Reserved ~
+                <a id="html-checker" href="#" target="_blank">Check HTML</a> ~
                 <a id="css-checker" href="#" target="_blank">Check CSS</a></small>
-           </p>
-          </footer>
-        <script>
-            document.getElementById("html-checker").setAttribute("href","https://validator.w3.org/nu/?doc=" + location.href);
-            document.getElementById("css-checker").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);  
-        </script>
-    </body>
+        </p>
+    </footer>
+    <script>
+        document
+            .getElementById("html-checker")
+            .setAttribute(
+                "href",
+                "https://validator.w3.org/nu/?doc=" + location.href
+            );
+        document
+            .getElementById("css-checker")
+            .setAttribute(
+                "href",
+                "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href
+            );
+    </script>
+</body>
+
 </html>
