--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="robots" content="noindex,nofollow" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>CSS Selectors by NAME HERE</title>
+    <title>CSS Selectors by Mahad Ali</title>
     <link href="css/pre.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
     <style>
@@ -175,7 +175,7 @@
 
     <footer class="page-footer">
         <p>
-            <small>&copy; 2023 by NAME HERE, All Rights Reserved ~
+            <small>&copy; 2023 by Mahad Ali, All Rights Reserved ~
                 <a id="html-checker" href="#" target="_blank">Check HTML</a> ~
                 <a id="css-checker" href="#" target="_blank">Check CSS</a></small>
         </p>
