--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <body>
     <header>
-        <h1 class="page-header">CSS Selectors by NAME HERE</h1>
+        <h1 class="page-header">CSS Selectors by Mahad Ali</h1>
 
         <nav>
             <ul>
